--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
@@ -1,7 +1,8 @@
 <div id="main-container">
-  <app-navbar [button]="false" [name]="'Dr Akanksha Gaonkar'"></app-navbar>
+  <div id="nav">
+  <app-navbar [button]="false" [name]="'Akanksha Gaonkar'"></app-navbar></div>
   <div id="parent-container">
-    <app-sidebar [menus]="menus"></app-sidebar>
+    <div class="sidebar"><app-sidebar [menus]="menus"></app-sidebar></div>
     <div id="sub-container">
       <div id="text1"><a href="#"></a>Back to Dashboard</div>
       <div id="text2">Update Details</div>
