--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
@@ -3,10 +3,10 @@
     height: 100vh;
 }
 
-// #nav-bar{
-//     height:7%;
-//     width: 100%;
-// }
+#nav{
+    height:7%;
+    width: 100%;
+}
 
  #parent-container{
     background-color: #F5FEFF;
@@ -14,17 +14,20 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+
+ }
+ .sidebar{
+    height: 100%;
+    width: 18%;
  }
 
 #sub-container{
     background-color: #ffff;
     box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
     border-radius: 6px;
-    width:80%; 
+    width:77%; 
     height: 90%;
-    border: 10px solid red;
+    margin: auto;
 }
 
 #container{
