--- a/CHL-Frontend/src/app/components/patient/medication/medication.component.html
+++ b/CHL-Frontend/src/app/components/patient/medication/medication.component.html
@@ -1,74 +1,88 @@
 <div id="main-container">
-    <app-navbar [btntext]="'Register'"></app-navbar>
-    <div id="parent-container">
-      <!-- <div id="side-bar"><app-sidebar [menus]="sidebartabs"></app-sidebar></div> -->
-        <div id="sub-container">
-            <div id="text1"><a href="#" ></a>Back to Dashboard</div>
-            <div id="update-btn"><app-button  class="sub-btn" [btntext]="'Add'" [btnConfig]="textBtnConfig"></app-button></div>
-            <div id="text2">Current Medication</div>
-            <div id="container1"><table>
-                <h2>Current Medication</h2>
-                  <tr bgcolor="#F5F5F5">
-                    <th>Medicine</th>
-                    <th>Dosage</th>
-                    <th>Date</th>
-                    <th>Record ID</th>
-                    <th>Action</th>
-                 
-                  </tr>
-                  <tr>
-                    <td>Albendazol</td>
-                    <td>0-0-1</td>
-                    <td>21-Jul-2022</td>
-                    <td>223183</td>
-                    <td><app-button  [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button></td>
-                  </tr>
-                  <tr>
-                    <td>HCQS 200</td>
-                    <td>0-1-0</td>
-                    <td>21-Jul2022</td>
-                    <td>456378</td>
-                    <td><app-button  [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button></td>
-                  </tr>
-                  <tr>
-                    <td>Pioz 15</td>
-                    <td>0-0-1</td>
-                    <td>21-Jul-2022</td>
-                    <td>568929</td>
-                    <td><app-button  [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button></td>
-                  </tr>
-                  
-                </table></div>
-            <div id="container2">
-                <table>
-                    <h2>Past Medication</h2>
-                      <tr bgcolor="#F5F5F5">
-                        <th>Medicine</th>
-                        <th>Dosage</th>
-                        <th>Date</th>
-                        <th>Record ID</th>
-                      </tr>
-                      <tr>
-                        <td>Albendazol</td>
-                        <td>0-0-1</td>
-                        <td>21-Jul-2022</td>
-                        <td>223183</td>
-                      </tr>
-                      <tr>
-                        <td>HCQS 200</td>
-                        <td>0-1-0</td>
-                        <td>21-Jul2022</td>
-                        <td>456378</td>
-                      </tr>
-                      <tr>
-                        <td>Pioz 15</td>
-                        <td>0-0-1</td>
-                        <td>21-Jul-2022</td>
-                        <td>568929</td>
-                      </tr>
-                    </table>
-                </div>
-                
-        </div>
+  <div id="nav">
+    <app-navbar [button]="false" [name]="'Akansha Gaonkar'"></app-navbar>
+  </div>
+  <div id="parent-container">
+    <div id="side-bar">
+      <app-sidebar [menus]="sidebartabs"></app-sidebar>
     </div>
-</div>  
+    <div id="sub-container">
+      <div id="text1"><a href="#"></a>Back to Dashboard</div>
+      <div id="update-btn">
+        <app-button class="sub-btn" [btntext]="'Add'" [btnConfig]="textBtnConfig"></app-button>
+      </div>
+      <div id="text2">Current Medication</div>
+      <div id="container1">
+        <table>
+          <h2>Current Medication</h2>
+          <tr bgcolor="#F5F5F5">
+            <th>Medicine</th>
+            <th>Dosage</th>
+            <th>Date</th>
+            <th>Record ID</th>
+            <th>Action</th>
+
+          </tr>
+          <tr>
+            <td>Albendazol</td>
+            <td>0-0-1</td>
+            <td>21-Jul-2022</td>
+            <td>223183</td>
+            <td>
+              <app-button [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button>
+            </td>
+          </tr>
+          <tr>
+            <td>HCQS 200</td>
+            <td>0-1-0</td>
+            <td>21-Jul2022</td>
+            <td>456378</td>
+            <td>
+              <app-button [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button>
+            </td>
+          </tr>
+          <tr>
+            <td>Pioz 15</td>
+            <td>0-0-1</td>
+            <td>21-Jul-2022</td>
+            <td>568929</td>
+            <td>
+              <app-button [btntext]="'Delete'" [btnConfig]="textBtnConfig"></app-button>
+            </td>
+          </tr>
+
+        </table>
+      </div>
+      <div id="container2">
+        <table>
+          <h2>Past Medication</h2>
+          <tr bgcolor="#F5F5F5">
+            <th>Medicine</th>
+            <th>Dosage</th>
+            <th>Date</th>
+            <th>Record ID</th>
+          </tr>
+          <tr>
+            <td>Albendazol</td>
+            <td>0-0-1</td>
+            <td>21-Jul-2022</td>
+            <td>223183</td>
+          </tr>
+          <tr>
+            <td>HCQS 200</td>
+            <td>0-1-0</td>
+            <td>21-Jul2022</td>
+            <td>456378</td>
+          </tr>
+          <tr>
+            <td>Pioz 15</td>
+            <td>0-0-1</td>
+            <td>21-Jul-2022</td>
+            <td>568929</td>
+          </tr>
+        </table>
+      </div>
+
+    </div>
+  </div>
+</div>
