--- a/CHL-Frontend/src/app/components/patient/medication/medication.component.scss
+++ b/CHL-Frontend/src/app/components/patient/medication/medication.component.scss
@@ -3,8 +3,9 @@
     height: 100vh;
 }
 
-#nav-bar{
+#nav{
     height:7%;
+    width:100%;
 }
 
  #parent-container{
@@ -15,13 +16,18 @@
     justify-content: center;
     align-items: center;
  }
+ #side-bar{
+    width:18%;
+    height:100%;
+ }
 
 #sub-container{
     background-color: #ffff;
     box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
     border-radius: 6px;
-    width:85%; 
+    width:80%; 
     height: 90%;
+    margin: auto;
 }
 
 #container1{
@@ -29,22 +35,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-#side-bar{
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: left;
-    // align-items: center;
-    // position: relative;
-    // width: 76%;
-    // height: 85%;
-    // box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-    // border-radius: 10px;
-    // position: absolute;
-    // left: 409px;
-    // top: 110px;
-    // background: #FFFFFF;
 }
 
 // #container3{
