--- a/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.scss
+++ b/CHL-Frontend/src/app/components/patient-registration/patient-registration.component.scss
@@ -61,20 +61,21 @@
 
 #reg-container {
     width: 54%;
-    height: 85%;
+    height: 90%;
     background: #FFFFFF;
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-    border-radius: 6px;
-    padding: 1em;
+    box-shadow: 0 0.2em 0.5em rgba(0, 0, 0, 0.15);
+    border-radius: 0.3em;
+    margin: auto;
+    padding: 1.5em;
 
     p {
 
-        padding-top: 20px;
+        padding-top: 1.1em;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 400;
-        font-size: 20px;
-        line-height: 20px;
+        font-size: 1em;
+        line-height: 1.1em;
         color: #1A1A1A;
 
     }
@@ -85,19 +86,36 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    font-size: 28px;
-    line-height: 29px;
+    font-size: 1.4em;
+    line-height: 1.4em;
     color: #2C2D2D;
 
 
 }
-
+.main-form{
+    padding: auto;
+    padding-top: 2em;
+    padding-left: 2em;
+    margin: auto;
+}
 #buttons {
     display: flex;
     flex-direction: row;
     gap: 0.5em;
 
 }
+.form-group{
+    display: flex;
+    flex-direction: row;
+   gap: 10em;
+}
+.form-flex{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
 
 button {
     font-family: 'Montserrat';
@@ -131,6 +149,9 @@ label {
     font-size: 0.8em;
     line-height: 1em;
     color: #1A1A1A;
+}
+#login-btn{
+    width:6em;
 }
 }
 }
