--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
@@ -4,7 +4,7 @@
   <div id="parent-container">
     <div class="sidebar"><app-sidebar [menus]="menus"></app-sidebar></div>
     <div id="sub-container">
-      <div id="text1"><a href="#"></a>Back to Dashboard</div>
+      <div id="text1"><a href="#"></a>&lt; &nbsp;Back to Dashboard</div>
       <div id="text2">Update Details</div>
       <div id="container">
         <form (ngSubmit)="onupdate()">
@@ -13,38 +13,43 @@
               <div class="form-group">
                 <label for="first name">First name</label>
                 <!-- <input id="first name" type="text" class="form-control" /> -->
-                <app-input [ipConfig]="ipConfig" (outputEmit)="firstNameReceived($event) "></app-input>
+                <app-input [ipConfig]="ipConfig1" (outputEmit)="firstNameReceived($event) "></app-input>
 
               </div>
               <div class="form-group">
                 <label for="email">Email</label>
-                <input id="email" type="text" class="form-control" />
+                <!-- <input id="email" type="text" class="form-control" /> -->
+                <app-input [ipConfig]="ipConfig2" (outputEmit)="emailReceived($event) "></app-input>
               </div>
               <div class="form-group">
                 <label for="gender">Gender</label>
-                <input id="gender" type="text" class="form-control" />
+                <!-- <input id="gender" type="text" class="form-control" /> -->
+                <app-input [ipConfig]="ipConfig3" (outputEmit)="genderReceived($event) "></app-input>
               </div>
             </div>
             <div id="sub-container2">
               <div class="form-group">
                 <label for="Last name">Last name</label>
                 <!-- <input id="last name" type="text" class="form-control" /> -->
-                <app-input [ipConfig]="ipConfig2" (outputEmit)="lastNameReceived($event) "></app-input>
+                <app-input [ipConfig]="ipConfig4" (outputEmit)="lastNameReceived($event) "></app-input>
               </div>
               <div class="form-group">
                 <label for="contactno">Contact No</label>
-                <input id="contactno" type="text" class="form-control" />
+                <!-- <input id="contactno" type="text" class="form-control" /> -->
+                <app-input [ipConfig]="ipConfig5" (outputEmit)="contactNoReceived($event) "></app-input>
               </div>
               <div class="form-group">
                 <label for="contactno">Age</label>
-                <input id="age" type="text" class="form-control" />
+                <!-- <input id="age" type="text" class="form-control" /> -->
+                <app-input [ipConfig]="ipConfig6" (outputEmit)="ageReceived($event) "></app-input>
               </div>
             </div>
           </div>
           <div id="container2">
-            <div class="form-group">
+            <div id="address-bar" class="form-group">
               <label for="address">Address</label>
-              <input id="address" type="text" class="form-control" />
+              <!-- <input id="address" type="text" class="form-control" /> -->
+              <app-input [ipConfig]="ipConfig7" (outputEmit)="addressReceived($event) "></app-input>
             </div>
           </div>
           <div id="container3">
