--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
@@ -40,12 +40,10 @@
 
 #container3{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
     width: 100%;
-     padding-left: 150px;
-    padding-right: 150px;
-    padding-top: 10px;
 }
 
 #container1{
@@ -58,19 +56,22 @@
 
 #container2{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
-    padding-left: 150px;
-    padding-right: 150px;
-    padding-top: 10px;
 }
 
 #side-bar{
     width:100%; 
     height: 100%;
-    border: 10px solid orangered;
+}
+
+#address-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0px 70px ;
+
 }
 #sub-container1,#sub-container2{
     width: 40%;
@@ -87,6 +88,8 @@ label + input:focus {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding-bottom: 1em;
+    
 }
 
 form{
@@ -121,7 +124,7 @@ label{
     font-size: 20px;
     line-height: 29px;
     padding-top: 30px;
-    padding-left: 40px  ;
+    padding-left: 40px;
     padding-bottom: 50px;
     color: #2C2D2D;
 }
@@ -146,4 +149,8 @@ input:focus{
     border-color: #1CB5BD;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px #1CB5BD;
     outline: 0 none;
+}
+
+#update-btn{
+    padding-top: 2em;
 }
