--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -31,8 +31,80 @@
               <app-button [btntext]="'Filter severity'" [btnConfig]="textBtnConfig"></app-button>
             </div>
             <div style="margin-left: 10px;">
-              <app-button [btntext]="'Add past record'" [btnConfig]="textBtnConfig2"></app-button>
+              <app-button [btntext]="'Add past record'" [btnConfig]="textBtnConfig2" (click)="openPopup()"></app-button>
             </div>
+            <!--Modal starts-->
+            <div>
+              <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
+                <div class="modal-dialog modal-lg" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h4 class="modal-title">Add past record</h4>
+                    </div>
+                    <div class="modal-body">
+                      <!-- <form>
+                        <div class="flex-modal">
+                          <div class="top">
+                            <div class="left">
+                              <label>Date:</label>
+                              <app-input [ipConfig]="dateConfig" (outputEmit)="onClickEventReceived($event)">
+                              </app-input>
+                            </div>
+                            <div class="right">
+                              <label>Doctor name:</label>
+                              <app-input [ipConfig]="nameConfig" (outputEmit)="onClickEventReceived($event)">
+                              </app-input>
+                            </div>
+                          </div>
+                          <div class="bottom">
+                            <div class="left">
+                              <label>Diagnosis:</label>
+                              <app-input [ipConfig]="diagnosisConfig" (outputEmit)="onClickEventReceived($event)">
+                              </app-input>
+                            </div>
+                            <div class="right">
+                              <label>Prescription:</label>
+                              <app-input [ipConfig]="descriptionConfig" (outputEmit)="onClickEventReceived($event)">
+                              </app-input>
+                            </div>
+                          </div>
+                        </div>
+                      </form> -->
+
+                      <div class="flex-modal">
+                        <div class="grid-item">
+                          <label>Date:</label>
+                          <app-input [ipConfig]="dateConfig" (outputEmit)="onClickEventReceived($event)">
+                          </app-input>
+                        </div>
+                        <div class="grid-item">
+                          <label>Doctor name:</label>
+                          <app-input [ipConfig]="nameConfig" (outputEmit)="onClickEventReceived($event)">
+                          </app-input>
+                        </div>
+                        <div class="grid-item">
+                          <label>Diagnosis:</label>
+                          <app-input [ipConfig]="diagnosisConfig" (outputEmit)="onClickEventReceived($event)">
+                          </app-input>
+                        </div>
+                        <div class="grid-item">
+                          <label>Prescription:</label>
+                          <app-input [ipConfig]="descriptionConfig" (outputEmit)="onClickEventReceived($event)">
+                          </app-input>
+                        </div>
+                      </div>
+
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-danger" (click)="closePopup()">
+                        Close
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--Modal ends-->
           </div>
         </div>
         <div class="table-container">
@@ -105,6 +177,7 @@
               <td>3</td>
               <td>
                 <app-button [btntext]="'View'" [btnConfig]="textBtnConfig"></app-button>
+
               </td>
             </tr>
 
@@ -115,4 +188,3 @@
     </div>
   </div>
 </div>
-
