--- a/CHL-Frontend/src/app/components/past-records/past-records.component.scss
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.scss
@@ -1,4 +1,3 @@
-
 .main-container {
     width: 100vw;
     height: 100vh;
@@ -46,7 +45,7 @@
                 .search-filter {
                     display: flex;
                     justify-content: space-between;
-                    margin: 20px;
+                    margin: 1.25em;
 
                     .left {
                         display: flex;
@@ -74,14 +73,46 @@
 
                 .table-container {
                     position: relative;
-                    margin: 1.25em;                   
+                    margin: 1.25em;
                 }
             }
         }
     }
 }
 
+// .flex-modal{
+//     display: flex;
+//     flex-direction: column;
 
+//     .top, .bottom{
+//         display: flex;
+//         flex-direction: row;
+//         justify-content: space-between;
+
+//         .left, .right{
+//             display: flex;
+//             flex-direction: row;
+//             justify-content: space-between;
+//         }
+//     }
+// }
+
+.flex-modal {  display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 2em 3em;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". ."
+      ". .";
+
+      .grid-item{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+  }
+  
 
 
 
@@ -142,3 +173,15 @@ td {
 }
 
 
+.modal-title {
+    width: 10.25em;
+    height: 1.875em;
+
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1.25em;
+    line-height: 1.875em;
+    letter-spacing: 0.1em;
+    color: rgba(0, 0, 0, 0.85);
+}
