redundant codes removed

--- a/CHL-Frontend/src/app/components/past-records/past-records.component.html
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.html
@@ -59,8 +59,8 @@
                           </app-input>
                         </div>
                         <div class="grid-item">
-                          <label>Prescription:</label>
-                          <app-input [ipConfig]="descriptionConfig" (outputEmit)="onClickEventReceived($event)">
+                          <label id="prescription-label">Prescription:</label>
+                          <app-input [ipConfig]="presscriptionConfig" (outputEmit)="onClickEventReceived($event)">
                           </app-input>
                         </div>
                       </div>
