--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -13,21 +13,21 @@
                     <div >
                         <span id="text">Select the User Type</span>
                         <div id="buttons">
-                            <app-button  [btntext]="'Patient'" [btnConfig]="textBtnConfig2"></app-button>
-                            <app-button  [btntext]="'Doctor'" [btnConfig]="textBtnConfig2"></app-button>
-                            <app-button  [btntext]="'Admin'" [btnConfig]="textBtnConfig2"></app-button>
+                            <button >Patient</button>
+                            <button >Doctor</button>
+                            <button >Admin</button>
                             
                         </div>
                     </div>
                     <div id="form-container">
                         <div class="form-group">
                             <div id="name">Username</div> 
-                            <app-input [ipConfig]="ipConfig"></app-input>
+                            <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
                             </div>
                         
                         <div class="form-group">
                             <div id="pass">Password</div>
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
+                            <app-input [ipConfig]="ipConfig2" (outputEmit)="onClickEventReceived($event)"></app-input>
                         </div>
                     </div>
                     <div id="login-btn">
