--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -79,10 +79,8 @@
 
 .form-group{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    flex-direction: column;
+    // width: 100%;
 }
 
 form{
@@ -93,15 +91,6 @@ form{
     height: 100%;
 }
 
-// input{
-//     width: 80%;
-//     margin-left: 20px;
-//     font-family: 'Montserrat';
-//     font-style: normal;
-    
-   
-    
-// }
 #name,#pass{
     // border: #1A1A1A 1px solid ;
     width: 20%;
@@ -114,25 +103,8 @@ form{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
-    
 
-    // width: 400px;
-    // height: 42px;
-    // left: 1157px;
-    // top: 397px;
 
 }
-app-button{
-    margin-right: 5px;
-    
-}
-input:focus{
-    border-color: #1CB5BD;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px #1CB5BD;
-    outline: 0 none;
-    // text-decoration
-    background-color: '#DAFDFF';
-    // background-color: #1A1A1A;
-}
+
 
