--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -1,43 +1,47 @@
 <div id="main-container">
     <div id="nav">
-    <app-navbar [btntext]="'Register'"></app-navbar></div>
+        <app-navbar [btntext]="'Register'"></app-navbar>
+    </div>
     <div id="sub-container">
-        <div id= image-container>
-           <img src="assets/images/login_bg.png" alt="login-bg-image">
-           <div id="main-text"><strong> Your Health Comes First.</strong></div>
-           <div id="moto-text">With Central Health Log you can manage your personal health reports effectively. </div>
+        <div id=image-container>
+            <img src="assets/images/login_bg.png" alt="login-bg-image">
+            <div id="main-text"><strong> Your Health Comes First</strong></div>
+            <div id="moto-text">With Central Health Log you can manage your personal health reports effectively</div>
         </div>
         <div id="login-container">
-                <form>
-                    <div id ="login-heading">LOGIN</div>
-                    <div >
-                        <span id="text">Select the User Type</span>
-                        <div id="buttons">
-                            <button >Patient</button>
-                            <button >Doctor</button>
-                            <button >Admin</button>
-                            
-                        </div>
+            <form>
+                <div id="login-heading">
+                    <p>LOGIN</p>
+
+                    <p id="text">Select the User Type</p>
+                    <div id="buttons">
+                        <button [ngClass]="{'active': patientActive}" (click)="onPatientactive()">Patient</button>
+                        <button [ngClass]="{'active': doctorActive}" (click)="onDoctoractive()">Doctor</button>
+                        <button [ngClass]="{'active': adminActive}" (click)="onAdminactive()">Admin</button>
+
                     </div>
-                    <div id="form-container">
-                        <div class="form-group">
-                            <div id="name">Username</div> 
-                            <app-input [ipConfig]="ipConfig" (outputEmit)="onClickEventReceived($event)"></app-input>
-                            </div>
-                        
-                        <div class="form-group">
-                            <div id="pass">Password</div>
-                            <app-input [ipConfig]="ipConfig2" (outputEmit)="onClickEventReceived($event)"></app-input>
-                        </div>
+                </div>
+                <div id="form-container">
+                    <div class="form-group">
+                        <div id="name">Username</div>
+                        <app-input [ipConfig]="ipConfig" (outputEmit)="usernameReceived($event)"></app-input>
                     </div>
-                    <div id="login-btn">
-                    <app-button  [btntext]="'LOGIN'" [btnConfig]="textBtnConfig"></app-button></div>
-                    
-                </form> 
-            
-        </div> 
+
+                    <div class="form-group">
+                        <div id="pass">Password</div>
+                        <app-input [ipConfig]="ipConfig2" (outputEmit)="pwdReceived($event)"></app-input>
+                    </div>
+                </div>
+                <div id="login-btn">
+                    <app-button *ngIf="patientActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginPatient()"></app-button>
+                    <app-button *ngIf="doctorActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginDoctor()"></app-button>
+                    <app-button *ngIf="adminActive" [btntext]="'LOGIN'" [btnConfig]="textBtnConfig" (onClick)="loginAdmin()"></app-button>
+                </div>
+
+            </form>
+
+        </div>
     </div>
 </div>
 
 <!-- #loginForm="ngForm" (ngSubmit)="login(login)" -->
-
