--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -1,110 +1,143 @@
-#main-container{
+#main-container {
     width: 100vw;
     height: 100vh;
-}
 
-#nav{
-    height:7%;
-    width: 100%;
-}
-
-#sub-container{
-    height:93%;
-    background-color:#F5FEFF;
-    display: flex;
-    flex-direction:row;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-#image-container{
-    display: flex;
-    flex-direction:column;
-    justify-content: space-evenly;
-    align-items: center;
-    font-family: Montserrat;
-    #main-text{
-        font-size: 45px;
-        padding-top: 40px;
+    #nav {
+        height: 7%;
+        width: 100%;
     }
-    #moto-text{
-        font-size: 22px;
-        color: #737373;
-        padding-top: 10px;
+
+    #sub-container {
+        height: 93%;
+        background-color: #F5FEFF;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        font-family: 'Montserrat';
+        font-style: normal;
+
+        #image-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+
+            #main-text {
+                font-size: 2em;
+                padding-top: 1.5em;
+            }
+
+            #moto-text {
+                font-size: 1em;
+                color: #737373;
+                padding-top: 0.5em;
+                width: 60%;
+                text-align: center;
+            }
+        }
+
+        #login-container {
+            background-color: #ffff;
+            box-shadow: 0 0.1em 0.4em rgba(0, 0, 0, 0.15);
+            border-radius: 0.4em;
+            display: flex;
+            flex-direction: column;
+            width: 30%;
+            height: 60%;
+            justify-content: space-evenly;
+            align-items: center;
+
+            form {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                height: 100%;
+
+
+                #login-heading {
+                    p {
+                        font-size: 1.2em;
+                        text-align: center;
+                        font-weight: 700;
+                        line-height: 1.3em;
+                    }
+
+                    #text {
+                        font-weight: 400;
+                        font-size: 0.9em;
+                        line-height: 1em;
+                        color: #1A1A1A;
+                        text-align: center;
+                        border: #1A1A1A soild;
+                    }
+                }
+
+                #form-container {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                }
+
+                .form-group {
+                    display: flex;
+                    flex-direction: column;
+                }
+
+                #name,
+                #pass {
+                    font-weight: 400;
+                    font-size: 0.9em;
+                    line-height: 1em;
+                    color: #1A1A1A;
+                }
+
+                #buttons {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 0.5em;
+                    align-items: center;
+
+                }
+
+                button {
+                    font-weight: 500;
+                    font-size: 0.8em;
+                    line-height: 1.1em;
+                    width: 8em;
+                    height: 1.8em;
+                    border: 0.0625em solid #949494;
+                    border-radius: 0.0625em 0.0625em 0 0;
+                    box-sizing: border-box;
+                    background-color: #FFFFFF;
+                    outline: none;
+                }
+
+                button:hover,
+                button:focus,
+                button:active,
+                .active {
+                    font-weight: 700;
+                    background: #DAFDFF;
+                    border: 0.0625em solid #1CB5BD;
+                    color: #1CB5BD;
+                    outline: none;
+
+                }
+
+                label {
+                    font-weight: 400;
+                    font-size: 0.8em;
+                    line-height: 1em;
+                    color: #1A1A1A;
+                }
+
+                #login-btn {
+                    width: 6em;
+                    text-align: center;
+
+                }
+            }
+        }
     }
 }
-
-#login-container{
-    background-color: #ffff;
-    box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
-    border-radius: 6px;
-    display: flex;
-    flex-direction: column;
-    width:27%; 
-    height: 60%;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-#login-heading{
-    font-size: 45px;
-    text-align: center;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 29px;
-}
-
-#login-btn{
-    text-align: center;
-}
-
-#text{
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    color: #1A1A1A;
-    border: #1A1A1A soild ;
-}
-
-#form-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.form-group{
-    display: flex;
-    flex-direction: column;
-    // width: 100%;
-}
-
-form{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-}
-
-#name,#pass{
-    // border: #1A1A1A 1px solid ;
-    width: 20%;
-    margin-right: 20px;
-
-}
-
-#buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-
-}
-
-
