--- a/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
+++ b/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
@@ -11,15 +11,16 @@
  #parent-container{
     background-color: #F5FEFF;
     height:93%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+
  }
-.sidebar{
-    height:100%;
+ .sidebar{
+    height: 100%;
     width: 18%;
-}
+ }
+
 #sub-container{
     background-color: #ffff;
     box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
@@ -34,17 +35,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 
 #container3{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
     width: 100%;
-    padding-left: 150px;
-    padding-right: 150px;
-    padding-top: 10px;
-
 }
 
 #container1{
@@ -57,14 +56,21 @@
 
 #container2{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
-    padding-left: 150px;
-    padding-right: 150px;
-    padding-top: 10px;
-    
+}
+
+#side-bar{
+    width:100%; 
+    height: 100%;
+}
+
+#address-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0px 70px ;
 
 }
 #sub-container1,#sub-container2{
@@ -73,9 +79,8 @@
 }
 
 label + input:focus {
-    color: #000000;
+    color: #1CB5BD;
 }
-
 
 .form-group{
     display: flex;
@@ -83,6 +88,8 @@ label + input:focus {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding-bottom: 1em;
+    
 }
 
 form{
@@ -107,17 +114,17 @@ input{
 }
 
 label{
-    font-size: 25px;
+    font-size: 16px;
 }
 
 #text2{
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 29px;
     padding-top: 30px;
-    padding-left: 40px  ;
+    padding-left: 40px;
     padding-bottom: 50px;
     color: #2C2D2D;
 }
@@ -126,7 +133,7 @@ label{
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 20px;
     color: #737373;
     padding-top: 30px;
@@ -142,4 +149,8 @@ input:focus{
     border-color: #1CB5BD;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px #1CB5BD;
     outline: 0 none;
+}
+
+#update-btn{
+    padding-top: 2em;
 }
