--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -52,6 +52,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 1.7em;
+                align-items: center;
 
 
                 #login-heading {
@@ -89,6 +90,7 @@
                     font-size: 0.9em;
                     line-height: 1em;
                     color: #1A1A1A;
+                    padding-bottom: 0.4em;
                 }
 
                 #buttons {
