--- a/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
+++ b/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
@@ -38,7 +38,7 @@
 
 }
 
-#container3{
+#container2{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -54,11 +54,11 @@
     width: 100%;
 }
 
-#container2{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
+// #container2{
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
+// }
 
 #side-bar{
     width:100%; 
