--- a/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
+++ b/CHL-Frontend/src/app/components/patient/medical-data/medical-data.component.scss
@@ -35,7 +35,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
+#sub-container1,#sub-container2{
+    width: 100%;
 }
 
 #container2{
@@ -54,12 +57,6 @@
     width: 100%;
 }
 
-// #container2{
-//     display: flex;
-//     flex-direction: column;
-//     width: 100%;
-// }
-
 #side-bar{
     width:100%; 
     height: 100%;
@@ -74,8 +71,7 @@
 
 }
 #sub-container1,#sub-container2{
-    width: 40%;
-    padding: 0px 50px ;
+    padding: 0px 80px ;
 }
 
 label + input:focus {
@@ -115,6 +111,8 @@ input{
 
 label{
     font-size: 16px;
+    text-align: left;
+    padding-right: 10px;
 }
 
 #text2{
