past record page redesign

--- a/CHL-Frontend/src/app/components/past-records/past-records.component.scss
+++ b/CHL-Frontend/src/app/components/past-records/past-records.component.scss
@@ -55,9 +55,9 @@
                             width: 5.25em;
                             height: 1.875em;
 
-                            font-family: "Poppins";
-                            font-style: normal;
-                            font-weight: 600;
+                            // font-family: "Poppins";
+                            // font-style: normal;
+                            // font-weight: 600;
                             font-size: 1.25em;
                             line-height: 1.875em;
                             letter-spacing: 0.1em;
