--- a/CHL-Frontend/src/app/components/patient/medication/medication.component.html
+++ b/CHL-Frontend/src/app/components/patient/medication/medication.component.html
@@ -4,7 +4,7 @@
   </div>
   <div id="parent-container">
     <div id="side-bar">
-      <app-sidebar [menus]="sidebartabs"></app-sidebar>
+      <app-sidebar [menus]="menus"></app-sidebar>
     </div>
     <div id="sub-container">
       <div id="text1"><a href="#"></a>&lt; &nbsp;Back to Dashboard</div>
